fix image and project card alignment and responsiveness

--- a/styles.css
+++ b/styles.css
@@ -868,7 +868,7 @@ body.loaded .reveal.active {
 }
 
 .projects {
-    width: 80%;
+    width: 70%;
     min-width: 800px;
     justify-self: center;
     display: grid;
@@ -897,8 +897,9 @@ body.loaded .reveal.active {
     border: 1px solid rgba(255, 72, 0, 0.253);
     height: 85%;
     width: 85%;
+    max-width: 350px;
     border-radius: 1.2rem;
-    padding: 1.2rem;
+    padding: 1rem;
     transform-style: preserve-3d;
     will-change: transform;
     transition: transform .5s ease-in-out, background-color 0.5s ease-in-out;
